# minkindr

./: .gitignore
minkindr/: CMakeLists.txt  package.xml
minkindr/include/kindr/minimal/: common.h  macros.h
minkindr/include/kindr/minimal/implementation/: angle-axis-inl.h  quat-sim-transform-inl.h  quat-transformation-inl.h  rotation-quaternion-inl.h  transform-2d-inl.h
minkindr/test/: test-rotation.cc  test-sim3.cc  test-transformation-2d.cc  test-transformation.cc
